# QtProjects

analooginenkello/: kello.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  widget.cpp  widget.h
chattiprojekti/: CMakeLists.txt  chatserver.cpp  chatserver.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
laskuri/: calculator.cpp  calculator.h  calculator.ui
